--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Welcome To My Blog"
-author: "Tristan O'Malley"
-date: "2025-06-09"
+author: "Yuerong Zhang"
+date: "2025-06-12"
 categories: [news]
 ---
 
